# scaling_depopulation_mex

./: .gitignore  LICENSE  README.md  Snakefile  pyproject.toml
data/: Cuadros_MM2020.xlsx  centroid_overrides_ER_clean.xlsx  cve_code_names.json
data/ghs_pop/: 01.1.01POP_2020_54009_100.tif  02.1.01POP_2020_54009_100.tif  02.2.02POP_2020_54009_100.tif  02.2.03POP_2020_54009_100.tif  03.2.01POP_2020_54009_100.tif  03.2.02POP_2020_54009_100.tif  04.2.01POP_2020_54009_100.tif  05.1.01POP_2020_54009_100.tif  05.1.02POP_2020_54009_100.tif  05.1.03POP_2020_54009_100.tif  05.1.04POP_2020_54009_100.tif  06.1.01POP_2020_54009_100.tif  07.1.01POP_2020_54009_100.tif  07.1.02POP_2020_54009_100.tif  08.1.01POP_2020_54009_100.tif  (+54 more)
scripts/: analysis_cfactual.py  figure_all_maps.py  figure_area_scaling.py  figure_area_scaling_ind_temp.py  figure_area_scaling_map_deviations.py  figure_area_scaling_only_trans.py  figure_bar_plot_beta_compare.py  figure_demo_grid.py  figure_demo_rem.py  figure_demo_scaling.py  figure_densities_rem.py  figure_grid_errors_vs_rem.py  figure_histogram_grid_errors_class.py  figure_histogram_grid_errors_pop_delta.py  figure_maps_bars.py  figure_model_dynamics.py  figure_models.py  figure_phase_space_double.py  figure_pib_scaling.py  figure_q_scaling_beta_vs_p.py  figure_q_scaling_compared.py  figure_q_scaling_orig_decomp.py  figure_q_scaling_residuals.py  figure_reescaled_rhos.py  figures_histogram_grid_errors_dens_delta.py  figures_radial_functions.py  print_pop_at_5_data.py  table_agg_data.py  table_city_reports.py  table_grid_erros.py
(+12 files in other folders)
