[project]
name = "depopulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gonzalo Peraza", email = "ggperaza@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cmcrameri>=1.9",
    "contextily>=1.6.2",
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "matplotlib-scalebar>=0.9.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "snakemake>=9.9.0",
    "statsmodels>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
